store update times to check if (ended) auction is new, removed unused api key